full update project (backend + frontend + db + oauth2)